test/features/errors/control_flow/e1104_return_in_closure.spl
# E1104: Return in Closure

Feature: E1104 - Return in Closure
  As a Simple compiler
  I want to detect `return` statements used in closures
  So that closures use implicit returns instead

  Background:
    Given I have the Simple compiler

  Scenario: Return statement in closure
    When I compile:
      '''
      fn test():
        val f = \x:
          return x * 2  # Error: return not allowed in closure
        f(5)
      '''
    Then I should see error E1104 at line 3
    And the error message should be "`return` cannot be used in closure context"
    And the label should indicate "`return` not allowed in closure"
    And the help should suggest "closures should use implicit return or use a different control flow"

  Scenario: Return in nested closure
    When I compile:
      '''
      fn test():
        val outer = \x:
          val inner = \y:
            return x + y  # Error: return in nested closure
          inner(5)
        outer(10)
      '''
    Then I should see error E1104 at line 4

  Scenario: Return in closure passed to function
    When I compile:
      '''
      fn map(arr: [i32], f: fn(i32) -> i32) -> [i32]:
        # implementation

      fn test():
        val result = map([1, 2, 3], \x:
          return x * 2  # Error
        )
      '''
    Then I should see error E1104 at line 6

  Scenario: Valid implicit return in closure
    When I compile:
      '''
      fn test():
        val f = \x:
          x * 2  # OK: implicit return
        f(5)
      '''
    Then compilation should succeed

  Scenario: Valid closure with control flow
    When I compile:
      '''
      fn test():
        val f = \x:
          if x > 0:
            x * 2
          else:
            0
        f(5)
      '''
    Then compilation should succeed

  Scenario: Return in regular function is OK
    When I compile:
      '''
      fn double(x: i32) -> i32:
        return x * 2  # OK: regular function
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        val f = \x:
          return x * 2
      '''
    Then I should see error E1104
    And the error message should contain "클로저에서 Return"
